# mono_depth_rescaler

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  install_build_deps.sh  pyproject.toml
config/: pipeline.yaml
config/extrinsics/: starling2.yaml
config/intrinsics/: hires.yaml  tracking_down.yaml  tracking_front.yaml
proto/: config.py
proto/depth/: midas_tflite.py  mpa_disparity.py
proto/evaluation/: __init__.py  metrics.py
proto/modules/: multi_frame_window.py  rolling_shutter.py
proto/rescaler/: __init__.py  camera_model.py  geometry.py  pipeline.py  preprocess.py  smoother.py  tof_anchors.py  types.py
proto/rescaler/fits/: __init__.py  exponential.py  polynomial.py  splines.py
proto/sources/: offline.py  tof.py
proto/vio/: ext_vio.py
services/: mono_depth_rescaler.service
services/voxl-camera-server.service.d/: wants-depth.conf
services/voxl-tflite-server.service.d/: partof-camera.conf
src/: main.cpp
src/core/: camera_model.cpp  camera_model.h  config.cpp  config.h  fits.cpp  fits.h  geometry.cpp  geometry.h  linalg.h  pipeline.cpp  pipeline.h  preprocess.cpp  preprocess.h  tof_anchors.cpp  tof_anchors.h
src/inference/: mpa_backend.cpp  mpa_backend.h
src/io/: image_packet.h
src/tof/: tof_source.cpp  tof_source.h  tof_types.cpp  tof_types.h
src/vio/: mpa_vio_source.cpp  mpa_vio_source.h  pose_buffer.cpp  pose_buffer.h  vio_source.h  vio_types.h
tests/: test_config_anchors.py  test_config_tof_extrinsic.py  test_evaluation_metrics.py  test_fits.py  test_geometry.py  test_modules.py  test_offline_tof.py  test_pipeline.py  test_pipeline_tof.py  test_preprocess.py  test_smoother.py  test_tof.py  test_tof_anchors.py
tests/cpp/: test_core.cpp
